# rustground

./: .gitignore  .prettierignore  .prettierrc  Cargo.toml  README.md  docker-compose.yml  justfile  package-lock.json  package.json  tailwind.config.cjs  vite.config.js
client/src/: App.svelte  main.js
src/: arguments.rs  elasticsearch_ext.rs  fetcher.rs  index.rs  loader.rs  main.rs  options.rs  response_ext.rs  server.rs
