[package]
name = "rustground"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
axum = "0.6.10"
axum-server = "0.4.6"
clap = { version = "4.1.8", features = ["derive"] }
crates_io_api = "0.8.1"
elasticsearch = "8.5.0-alpha.1"
env_logger = "0.10.0"
http = "0.2.9"
log = "0.4.17"
redis = "0.22.3"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.94"
tokio = "1.26.0"
tower-http = { version = "0.4.0", features = ["cors"] }
